--- a/app/src/main/res/layout-land/fragment_calculator.xml
+++ b/app/src/main/res/layout-land/fragment_calculator.xml
@@ -26,6 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_expression"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_weight="0.2" />
 
         <LinearLayout
