--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -15,7 +15,7 @@
             android:icon="@drawable/ic_map"
             android:title="@string/map"/>
         <item
-            android:id="@+id/nav_photo_booth"
+            android:id="@+id/nav_photobooth"
             android:icon="@drawable/ic_camera"
             android:title="@string/photo_booth"/>
     </group>
