--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -17,7 +17,7 @@
         <item
             android:id="@+id/nav_photobooth"
             android:icon="@drawable/ic_camera"
-            android:title="@string/photo_booth"/>
+            android:title="@string/photobooth"/>
     </group>
 
 </menu>
